# MCAV

./: README.md
mcav_project/: .gitignore  Project Structure.md  doc.md  main.py  pyproject.toml  test_sim.py
mcav_project/config/: quadcopter_certified_circle.yaml  quadcopter_dynamic_circle.yaml  quadcopter_ff_circle.yaml  quadcopter_kinematic.yaml  quadcopter_lyapunov_circle.yaml  quadcopter_path_following_circle.yaml  quadcopter_saturated_circle.yaml  unicycle_circle.yaml  unicycle_fall_north.yaml  unicycle_lyapunov.yaml
mcav_project/figures/: .gitignore
mcav_project/models/quadcopter/: quadcopter.xml  quadcopter_dynamic.xml
mcav_project/models/unicycle/: unicycle.urdf  unicycle.xml
mcav_project/notebooks/: _lyapunov.md  final.ipynb  path_following_vs_traj_tracking.ipynb  quadcopter_certified.ipynb  quadcopter_dy_ff_lyapunov_circle.ipynb  quadcopter_dynamic_lyapunov_circle.ipynb  quadcopter_kinematic.ipynb  quadcopter_lyapunov_circle.ipynb  quadcopter_path_following.ipynb  unicycle_circle.ipynb  unicycle_fall_north.ipynb  unicycle_lyapunov_circle.ipynb  unicycle_lyapunov_circle_fixed.ipynb
mcav_project/notebooks/.ipynb_checkpoints/: final-checkpoint.ipynb  quadcopter_certified-checkpoint.ipynb  quadcopter_dy_ff_lyapunov_circle-checkpoint.ipynb  quadcopter_dynamic_lyapunov_circle-checkpoint.ipynb  quadcopter_kinematic-checkpoint.ipynb  quadcopter_lyapunov_circle-checkpoint.ipynb  unicycle_lyapunov_circle-checkpoint.ipynb
mcav_project/report/: poster.tex  report.aux  report.fdb_latexmk  report.fls  report.tex
mcav_project/src/logging/: sim_logger.py
(+19 files in other folders)
