[project]
name = "mcav-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.7",
    "marker-pdf>=1.10.2",
    "matplotlib>=3.10.9",
    "mujoco>=3.9.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
]
[tool.uv]
environments = ["sys_platform == 'darwin'"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
